add crud admin, restorer, login and register

--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -1,3 +1,4 @@
 <div class="container-fluid p-5 mt-4 text-center bg-dark text-white">
   Ubereat - 2020
+  <a class="nav-link" href="{{ path('restorer_create_restaurant') }}">add my restaurant</a>
 </div>
