--- a/templates/restorer/restaurant/edit.html.twig
+++ b/templates/restorer/restaurant/edit.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('restorer/restaurant/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('my_restaurant_show') }}">back my restaurant</a>
+    <a href="{{ path('restorer_restaurant_index') }}">back my restaurant</a>
 {% endblock %}
