--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -1,24 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#">Ubereat</a>
+	<a class="navbar-brand">Ubereat</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" >Accueil
-					<span class="sr-only">(current)</span>
-				</a>
-			</li>
+			{% if app.user == null or ('ROLE_RESTORER' or 'ROLE_ADMIN') not in app.user.roles %}
+				<li class="nav-item">
+					<a class="nav-link">Home
+						<span class="sr-only">(current)</span>
+					</a>
+				</li>
+			{% endif %}
+			{% if app.user %}
+				{% if 'ROLE_RESTORER' in app.user.roles %}
+					<a class="nav-link" href="{{ path('restorer_restaurant_index') }}">restaurant</a>
+					<a class="nav-link" href="{{ path('restorer_order_index') }}">orders</a>
+					<a class="nav-link" href="{{ path('restorer_dish_index') }}">dishes</a>
+				{% endif %}
+				{% if 'ROLE_ADMIN' in app.user.roles %}
+					<a class="nav-link" href="{{ path('user_index') }}">users</a>
+					<a class="nav-link" href="{{ path('restaurant_index') }}">restaurants</a>
+					<a class="nav-link" href="{{ path('order_index') }}">orders</a>
+					<a class="nav-link" href="{{ path('dish_index') }}">dishes</a>
+				{% endif %}
+			{% endif %}
 		</ul>
 
 		<form class="form-inline my-2 my-lg-0">
 			{% if app.user %}
-				<a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
+				<a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
 			{% endif %}
 			{% if app.user == null %}
-				<a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+				<a class="nav-link" href="{{ path('app_login') }}">Log In</a>
 			{% endif %}
 		</form>
 	</div>
