--- a/templates/restorer/order/index.html.twig
+++ b/templates/restorer/order/index.html.twig
@@ -26,7 +26,7 @@
 					</td>
                     <td>{{ order.state }}</td>
 					<td>
-						<a href="{{ path('my_order_edit', {'id': order.id}) }}">edit</a>
+						<a href="{{ path('restorer_order_edit', {'id': order.id}) }}">edit</a>
 					</td>
 				</tr>
 			{% else %}
