--- a/templates/restorer/restaurant/index.html.twig
+++ b/templates/restorer/restaurant/index.html.twig
@@ -26,7 +26,7 @@
 				<td>{{ restaurant.city }}</td>
 				<td>{{ restaurant.promotion }}</td>
 				<td>
-					<a href="{{ path('my_restaurant_edit') }}">edit</a>
+					<a href="{{ path('restorer_restaurant_edit') }}">edit</a>
 				</td>
 			</tr>
 		</tbody>
