--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -8,7 +8,7 @@
 		<ul class="navbar-nav mr-auto">
 			{% if app.user == null or 'ROLE_USER' in app.user.roles and app.user.roles|length == 1 %}
 				<li class="nav-item">
-					<a class="nav-link">Home
+					<a class="nav-link" href="{{ path('home') }}">Home
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
