--- a/templates/index/home.html.twig
+++ b/templates/index/home.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="jumbotron mt-5 d-flex flex-column justify-content-center align-items-center">
+	<div class="jumbotron d-flex flex-column justify-content-center align-items-center">
 		<h1 class="display-4">Ubereat</h1>
 		<p class="lead">
 			here is the list of your favorite restaurants</p>
