--- a/templates/user/shopping/index.html.twig
+++ b/templates/user/shopping/index.html.twig
@@ -43,6 +43,14 @@
 			<tfoot>
 				<tr>
 					<th colspan="4" class="text-right">
+						dishes :
+					</th>
+					<th>{{ total - 2.5 }}€</th>
+					<th colspan="4" class="text-right">
+						service :
+					</th>
+					<th>+ 2,5€</th>
+					<th colspan="4" class="text-right">
 						Total :
 					</th>
 					<th>{{ total }}
