--- a/templates/admin/order/show.html.twig
+++ b/templates/admin/order/show.html.twig
@@ -22,5 +22,5 @@
 
     <a href="{{ path('order_edit', {'id': order.id}) }}">edit</a>
 
-    {{ include('order/_delete_form.html.twig') }}
+    {{ include('admin/order/_delete_form.html.twig') }}
 {% endblock %}
