--- a/templates/admin/restaurant/edit.html.twig
+++ b/templates/admin/restaurant/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Restaurant</h1>
 
-    {{ include('restaurant/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin/restaurant/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('restaurant_index') }}">back to list</a>
 
-    {{ include('restaurant/_delete_form.html.twig') }}
+    {{ include('admin/restaurant/_delete_form.html.twig') }}
 {% endblock %}
