--- a/templates/security/restaurant/new.html.twig
+++ b/templates/security/restaurant/new.html.twig
@@ -4,8 +4,5 @@
 
 {% block body %}
     <h1>Create new Restaurant</h1>
-
-    {{ include('admin/restaurant/_form.html.twig') }}
-
-    <a href="{{ path('restaurant_index') }}">back to list</a>
+    {{ include('security/restaurant/_form.html.twig') }}
 {% endblock %}
