--- a/templates/user/shopping/index.html.twig
+++ b/templates/user/shopping/index.html.twig
@@ -46,10 +46,16 @@
 						dishes :
 					</th>
 					<th>{{ total - 2.5 }}€</th>
-					<th colspan="4" class="text-right">
+					<th></th>
+				</tr>
+				<tr>
+					<th colspan="4" class="text-right text-muted">
 						service :
 					</th>
-					<th>+ 2,5€</th>
+					<th class="text-muted">+ 2,5€</th>
+					<th></th>
+				</tr>
+				<tr>
 					<th colspan="4" class="text-right">
 						Total :
 					</th>
