--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -60,16 +60,19 @@
 							<span class="text-dark">delivery date:
 							</span>
 							{{ order.deliveryDate|date('Y-m-d H:i:s') }}</div>
-						{% for dish in order.Dish %}
+						<div>
+							<span class="text-dark">name:
+							</span>
+							{{ order.users.firstname }}
+							{{ order.users.firstname }}</div>
+						<span class="text-dark">dishes:
+						</span>
+						{% for orderDish in order.orderDishes %}
 							<div>
-								<span class="text-dark">dish:
-								</span>
-								{{ dish.name }}
+								{{ orderDish.quantity }}
+								{{ orderDish.dish.name }}
 							</div>
 						{% endfor %}
-                        {% if order == null %}
-                            no order
-                        {% endif %}
 					</div>
 				{% endfor %}
 			</caption>
