--- a/templates/admin/order/show.html.twig
+++ b/templates/admin/order/show.html.twig
@@ -1,26 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Order{% endblock %}
+{% block title %}Order
+{% endblock %}
 
 {% block body %}
-    <h1>Order</h1>
+	<h1>Order</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ order.id }}</td>
-            </tr>
-            <tr>
-                <th>Delivery_date</th>
-                <td>{{ order.deliveryDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ order.id }}</td>
+			</tr>
+			<tr>
+				<th>Delivery_date</th>
+				<td>{{ order.deliveryDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}</td>
+			</tr>
+			<tr>
+                <th>Dishes</th>
+				{% for orderDish in order.orderDishes %}
+                <td>
+					{{ orderDish.quantity }}
+					{{ orderDish.dish.name }}
+					<p></p>
+                </td>
+				{% endfor %}
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('order_index') }}">back to list</a>
+	<a href="{{ path('order_index') }}">back to list</a>
 
-    <a href="{{ path('order_edit', {'id': order.id}) }}">edit</a>
+	<a href="{{ path('order_edit', {'id': order.id}) }}">edit</a>
 
-    {{ include('admin/order/_delete_form.html.twig') }}
+	{{ include('admin/order/_delete_form.html.twig') }}
 {% endblock %}
