--- a/templates/admin/dish/edit.html.twig
+++ b/templates/admin/dish/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Dish{% endblock %}
+{% block title %}{{parent()}}Edit Dish{% endblock %}
 
 {% block body %}
     <h1>Edit Dish</h1>
