--- a/templates/admin/dish/index.html.twig
+++ b/templates/admin/dish/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dish index{% endblock %}
+{% block title %}{{parent()}}Dish index{% endblock %}
 
 {% block body %}
     <h1>Dish index</h1>
