--- a/templates/admin/dish/new.html.twig
+++ b/templates/admin/dish/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Dish{% endblock %}
+{% block title %}{{parent()}}New Dish{% endblock %}
 
 {% block body %}
     <h1>Create new Dish</h1>
