--- a/templates/admin/restaurant/index.html.twig
+++ b/templates/admin/restaurant/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Restaurant index{% endblock %}
+{% block title %}{{parent()}}Restaurant index{% endblock %}
 
 {% block body %}
     <h1>Restaurant index</h1>
