--- a/templates/admin/restaurant/new.html.twig
+++ b/templates/admin/restaurant/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Restaurant{% endblock %}
+{% block title %}{{parent()}}New Restaurant{% endblock %}
 
 {% block body %}
     <h1>Create new Restaurant</h1>
