--- a/templates/admin/restaurant/show.html.twig
+++ b/templates/admin/restaurant/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Restaurant
+{% block title %}{{parent()}}Restaurant
 {% endblock %}
 
 {% block body %}
