--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -27,6 +27,7 @@
 				{% endif %}
 				{% if 'ROLE_USER' in app.user.roles and app.user.roles|length == 1 %}
 					<a class="nav-link" href="{{ path('shopping_index') }}">my order</a>
+					<a class="nav-link" href="{{ path('user_orders') }}">history</a>
 				{% endif %}
 				<a class="nav-link" href="{{ path('account_edit') }}">account</a>
 			{% endif %}
