--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Order index
+{% block title %}{{parent()}}Order index
 {% endblock %}
 
 {% block body %}
