--- a/templates/admin/order/new.html.twig
+++ b/templates/admin/order/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Order{% endblock %}
+{% block title %}{{parent()}}New Order{% endblock %}
 
 {% block body %}
     <h1>Create new Order</h1>
