--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
+			<link rel="icon" href="https://mon-parrainage.com/wp-content/uploads/2018/08/uber-eats.png"/>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
 			<link href="{{ asset('css/styles.css') }}" rel="stylesheet"/>
 		{% endblock %}
