--- a/templates/restorer/dish/show.html.twig
+++ b/templates/restorer/dish/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dish{% endblock %}
+{% block title %}{{parent()}}Dish{% endblock %}
 
 {% block body %}
     <h1>Dish</h1>
