--- a/templates/restorer/order/edit.html.twig
+++ b/templates/restorer/order/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Order{% endblock %}
+{% block title %}{{parent()}}Edit Order{% endblock %}
 
 {% block body %}
     <h1>Edit Order</h1>
