--- a/templates/restorer/restaurant/edit.html.twig
+++ b/templates/restorer/restaurant/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Restaurant{% endblock %}
+{% block title %}{{parent()}}Edit {{ restaurant.name }}{% endblock %}
 
 {% block body %}
     <h1>Edit Restaurant</h1>
