--- a/templates/restorer/restaurant/index.html.twig
+++ b/templates/restorer/restaurant/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{{ restaurant.name }}
+	{{parent()}}{{ restaurant.name }}
 {% endblock %}
 
 {% block body %}
