--- a/templates/user/account/edit.html.twig
+++ b/templates/user/account/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}My profile{% endblock %}
+{% block title %}{{parent()}}My profile{% endblock %}
 
 {% block body %}
     <h1>My profile</h1>
