--- a/templates/user/shopping/index.html.twig
+++ b/templates/user/shopping/index.html.twig
@@ -72,7 +72,10 @@
 			</a>
 		</div>
 	{% else %}
-
-		<p>there is no dishes in your order</p>
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container">
+				<p class="lead">There is no dishes in your order</p>
+			</div>
+		</div>
 	{% endif %}
 {% endblock %}
