--- a/templates/admin/order/show.html.twig
+++ b/templates/admin/order/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{parent()}}Order
+{% block title %}
+	{{parent()}}Order
 {% endblock %}
 
 {% block body %}
@@ -18,23 +19,26 @@
 			</tr>
 			<tr>
 				<th>Order commentary</th>
+				<td></td>
 				<caption class="d-flex flex-column" style="margin-left: 10%;">
-					<p>message : {{ order.commentary.message }}
+					<p>message :
+						{{ order.commentary.message }}
 					</p>
-					<p>send the {{ order.commentary.sendDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}
+					<p>send the
+						{{ order.commentary.sendDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}
 					</p>
 				</caption>
 			</tr>
 			<tr>
 				<th>Dishes</th>
 				<td></td>
-				{% for orderDish in order.orderDishes %}
-					<td>
-						{{ orderDish.quantity }}
-						{{ orderDish.dish.name }}
-						<p></p>
-					</td>
-				{% endfor %}
+				<caption class="d-flex flex-column" style="margin-left: 10%;">
+					{% for orderDish in order.orderDishes %}
+						<p>
+							{{ orderDish.quantity }} {{ orderDish.dish.name }}
+						</p>
+					{% endfor %}
+				</caption>
 			</tr>
 		</tbody>
 	</table>
