--- a/templates/user/orders/index.html.twig
+++ b/templates/user/orders/index.html.twig
@@ -32,9 +32,11 @@
 					</td>
 				</tr>
 			{% else %}
-				<tr>
-					<td colspan="3">no records found</td>
-				</tr>
+				<div class="jumbotron jumbotron-fluid">
+					<div class="container">
+						<p class="lead">Your don't have orders</p>
+					</div>
+				</div>
 			{% endfor %}
 		</tbody>
 	</table>
