--- a/templates/components/admin/nav_admin.html.twig
+++ b/templates/components/admin/nav_admin.html.twig
@@ -154,10 +154,10 @@
                         <i class="fas fa-desktop"></i>Restaurant</a>
                     <ul class="list-unstyled navbar__sub-list js-sub-list">
                         <li>
-                            <a href="button.html">Button</a>
+                            <a href="{{ path('restaurant_index') }}">All Restaurants</a>
                         </li>
                         <li>
-                            <a href="badge.html">Badges</a>
+                            <a href="{{ path('restaurant_new') }}">New Restaurant</a>
                         </li>
                     </ul>
                 </li>
@@ -166,10 +166,10 @@
                         <i class="fas fa-desktop"></i>Order</a>
                     <ul class="list-unstyled navbar__sub-list js-sub-list">
                         <li>
-                            <a href="{{ path('') }}">Button</a>
+                            <a href="{{ path('') }}">All Orders</a>
                         </li>
                         <li>
-                            <a href="badge.html">Badges</a>
+                            <a href="{{ path('order_new') }}">New Order</a>
                         </li>
                     </ul>
                 </li>
