--- a/templates/user/orders/index.html.twig
+++ b/templates/user/orders/index.html.twig
@@ -1,20 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{parent()}}Order index
+{% block title %}
+	{{parent()}}Order index
 {% endblock %}
 
 {% block body %}
-	<h1>Order index</h1>
+	<h1>Orders history</h1>
 
 	<table class="table">
-		<thead>
-			<tr>
-				<th>Delivery_date</th>
-				<th>Dishes</th>
-				<th>State</th>
-				<th>actions</th>
-			</tr>
-		</thead>
+		{% if orders is not empty %}
+			<thead>
+				<tr>
+					<th>Delivery_date</th>
+					<th>Dishes</th>
+					<th>State</th>
+					<th>actions</th>
+				</tr>
+			</thead>
+		{% endif %}
 		<tbody>
 			{% for order in orders %}
 				<tr>
