--- a/templates/user/orders/index.html.twig
+++ b/templates/user/orders/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{{parent()}}Order index
+	{{parent()}}Orders history
 {% endblock %}
 
 {% block body %}
